# cookiecutter-pyproject

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/requirements/: dev-requirements.txt  requirements.txt
